# monit

./: Makefile  README.md  restart  start  stop  task.sh  upgrade
admin/: Rakefile
admin/config/: cassandra.yml.tmp  database.yml.tmp  routes.rb
admin/db/: schema.rb  seeds.rb
admin/doc/: README_FOR_APP  charts.sql  git_init.txt  rename  views.sql
admin/install/: gems
cloud/: ChangeLog  Makefile  README  debug  monit_ctl  start  stop  tags
cloud/include/: monit.hrl
cloud/src/: .monit_aggre.erl.swp  monit.app  monit.erl  monit_agent_hub.erl  monit_aggre.erl  monit_app.erl  monit_bot.erl  monit_ctl.erl  monit_disco.erl  monit_entry.erl  monit_flap.erl  monit_i18n.erl  monit_last.erl  monit_metric.erl  monit_node_hub.erl  monit_object.erl  monit_object_event.erl  monit_object_type.erl  monit_service.erl  monit_slave.app  monit_slave.erl  monit_slave_sup.erl  monit_status.erl  monit_sup.erl  tags
cloud/support/: include.mk
cloud/tasks/: cleanup.py  rollup.py  settings.py
cloud/test/: erlopt_test.erl
db/mysql/: dump  dumpdata  import
etc/nginx/: admin.monit.cn  blog.monit.cn  op.monit.cn  phpmyadmin.monit.cn  www.monit.cn
node/: ChangeLog  Makefile  README  cluster  start  status  stop
operator/: .gitignore
smarta/: ChangeLog  Makefile  README  smartactl
smarta/c/: Changelog  Makefile.am  README  smarta.conf
smarta/c/etc/: smarta.conf
smarta/c/src/: ae.c  ae_select.c  alert.c  auth.c  hash.c  hash.h  jid.c  jid.h  log.c  log.h  parser.c  parser.h  sasl.c  sasl.h  smarta.c  stanza.c  stanza.h  xmpp.c  xmpp.h
web/: .gitignore
(+694 files in other folders)
